--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <p class="text">
           Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Using
           React JS as my primary front-end developing framework. Having an in-depth knowledge of front-end development
-          skills including React JS, Redux, JavaScript(ES6), Native JavaScript, Saga, RxJS, styled-components, React Native,
-          Server-Side Render, WebSocket, RWD, SASS, JQuery, Ajax, Bootstrap, and back-end development skills including
+          skills including React JS, Redux, JavaScript(ES6), Native JavaScript, React Hooks, Saga, RxJS, styled-components, React Native,
+          End-to-end Test, Server-Side Render, WebSocket, RWD, SASS, JQuery, Ajax, Bootstrap, and back-end development skills including
           Ruby on Rails, RESTful API, SQL.
         </p>
         <div class="button-group">
@@ -99,8 +99,22 @@
           <div class="timeline-badge info"><i class="fa fa-play"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
+              <h3>Software Engineer</h3>
+              <h4>Actiontec Electronics, 2019-present</h4>
+            </div>
+            <div class="timeline-body">
+              <p>Maintained Optim cloud platform used by ten thousands+ customer service operators, renewed CPE UI in firmware by React JS and built up a new system Service Module Management mockup for CES demo.</p>
+              <p>Developed end-to-end test procedure and features to improve team coding quality.</p>
+              <!-- <span class="more-btn-breaktime more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span> -->
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-badge info"><i class="fa fa-briefcase"></i></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
               <h3>Frontend Engineer</h3>
-              <h4>Breaktime Inc.(鴻海富盈數據), 2019-present</h4>
+              <h4>Breaktime Inc.(鴻海富盈數據), 2019 Feb-2019 Dec</h4>
             </div>
             <div class="timeline-body">
               <p>Established a new system - Creative Studio to deliver AD creatives. The system is
@@ -111,7 +125,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-inverted">
+        <li class="timeline-forwrad">
           <div class="timeline-badge info"><i class="fa fa-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -126,7 +140,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-forwrad">
+        <li class="timeline-inverted">
           <div class="timeline-badge primary"><i class="fa fa-globe"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -141,7 +155,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-inverted">
+        <li class="timeline-forwrad">
           <div class="timeline-badge success"><i class="fa fa-desktop"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -156,7 +170,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-forwrad">
+        <li class="timeline-inverted">
           <div class="timeline-badge danger"><i class="fa fa-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -172,7 +186,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-inverted">
+        <li class="timeline-forwrad">
           <div class="timeline-badge warning"><i class="fa fa-graduation-cap"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -184,7 +198,7 @@
             </div>
           </div>
         </li>
-        <li class="timeline-forwrad">
+        <li class="timeline-inverted">
           <div class="timeline-badge primary"><i class="fa fa-graduation-cap"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -278,15 +292,15 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">Redux-Saga</div>
-          <span class="percentage-number">80%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 80%">
-          </div>
           <div class="skill-title">React Hooks</div>
-          <span class="percentage-number">80%</span>
+          <span class="percentage-number">85%</span>
           <div class="skill-bar">
-            <span class="percentage" style="width: 80%">
+            <span class="percentage" style="width: 85%">
+          </div>
+          <div class="skill-title">Redux-Saga</div>
+          <span class="percentage-number">85%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 85%">
           </div>
           <div class="skill-title">styled-components</div>
           <span class="percentage-number">85%</span>
@@ -296,7 +310,7 @@
           <div class="skill-title">RxJS</div>
           <span class="percentage-number">75%</span>
           <div class="skill-bar">
-            <span class="percentage" style="width: 80%">
+            <span class="percentage" style="width: 75%">
           </div>
           <div class="skill-title">React Native</div>
           <span class="percentage-number">70%</span>
@@ -315,10 +329,10 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">Jest</div>
-          <span class="percentage-number">70%</span>
+          <div class="skill-title">E2E test(cypress) / Unit test(Jest)</div>
+          <span class="percentage-number">75%</span>
           <div class="skill-bar">
-            <span class="percentage" style="width: 70%">
+            <span class="percentage" style="width: 75%">
           </div>
           <div class="skill-title">Server-Side Render</div>
           <span class="percentage-number">70%</span>
