--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="avatar-box">
           <div class="slant"></div>
-          <img src=".\images\my-avatar.jpg" alt="avatar">
+          <div class="avatar-img"></div>
         </div>
       </div>
     </div>
@@ -72,11 +72,7 @@
     <div class="container">
       <div class="shadow-box summary-content">
         <p class="text">
-          Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Using
-          React JS as my primary front-end developing framework. Having an in-depth knowledge of front-end development
-          skills including React JS, Redux, JavaScript(ES6), Native JavaScript, React Hooks, Saga, RxJS, styled-components, React Native,
-          End-to-end Test, Server-Side Render, WebSocket, RWD, SASS, JQuery, Ajax, Bootstrap, and back-end development skills including
-          Ruby on Rails, RESTful API, SQL.
+          Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Using React JS as my primary front-end developing framework. Having an in-depth knowledge of front-end development skills including React JS, Redux, JavaScript(ES6, Native), Saga, React-Native, RxJS, styled-components, Server-Side Render, d3/amcharts graph visualization, e2e testing(cypress), WebSocket, RWD, SASS, and back-end development skills including Ruby on Rails, RESTful API, SQL.
         </p>
         <div class="button-group">
           <div class="download-cv-btn">
@@ -103,9 +99,9 @@
               <h4>Actiontec Electronics, 2019-present</h4>
             </div>
             <div class="timeline-body">
-              <p>Maintained Optim cloud platform used by ten thousands+ customer service operators, renewed CPE UI in firmware by React JS and built up a new system Service Module Management mockup for CES demo.</p>
-              <p>Developed end-to-end test procedure and features to improve team coding quality.</p>
-              <!-- <span class="more-btn-breaktime more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span> -->
+              <p>Maintaine Optim cloud platform used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</p>
+              <p>Develope end-to-end test procedures and features to improve team coding quality.</p>
+              <span class="more-btn-actiontec more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -265,7 +261,7 @@
         <div id="breaktime-content" class="overlay-inner shadow-box">
           <div class="overlay-heading clearfix">
             <h3>Frontend Engineer</h3>
-            <h4>Breaktime Inc.(鴻海富盈數據), 2019-present</h4>
+            <h4>Breaktime Inc.(鴻海富盈數據), 2019 Feb-2019 Dec</h4>
           </div>
           <span class="close-btn">&#10005;</span>
           <ol>
@@ -276,6 +272,19 @@
               Contribute 100% of features and the style in the website production, using the latest React skills
               including React-Saga, React-Hook, and RxJS. Deploy stage environment server with Nginx on GCP.</li>
             </li>
+          </ol>
+        </div>
+        <div id="actiontec-content" class="overlay-inner shadow-box">
+          <div class="overlay-heading clearfix">
+            <h3>Software Engineer</h3>
+            <h4>Actiontec Electronics, 2019-present</h4>
+          </div>
+          <span class="close-btn">&#10005;</span>
+          <ol>
+            <li>Maintaine Optim cloud platform used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</li>
+            <li>Renewe CPE UI in firmware with React JS and built up a new system Service Module Management mockup for CES demo.</li>
+            <li>Develope user view app with React-Native and Expo, the product will be pitched to dozens of new ISPs.</li>
+            <li>Develope end-to-end test procedures and features to improve team coding quality.</li>
           </ol>
         </div>
       </div>
@@ -302,7 +311,7 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 85%">
           </div>
-          <div class="skill-title">styled-components</div>
+          <div class="skill-title">CSS in JS / styled-components</div>
           <span class="percentage-number">85%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 85%">
@@ -334,15 +343,15 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 75%">
           </div>
+          <div class="skill-title">D3 / amcharts Graph Visualization</div>
+          <span class="percentage-number">80%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 80%">
+          </div>
           <div class="skill-title">Server-Side Render</div>
           <span class="percentage-number">70%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 70%">
-          </div>
-          <div class="skill-title">WebSocket</div>
-          <span class="percentage-number">80%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 80%">
           </div>
           <div class="skill-title">Ruby on Rails</div>
           <span class="percentage-number">85%</span>
@@ -385,7 +394,7 @@
             <div class="work-icons">
               <a href="https://github.com/kansetsu7/khroma" class="btn-circle" style="background: #4E2779"
                 target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-              <a href="http://34.80.167.24" class="btn-circle" style="background: #2664BE" target="_blank"><i
+              <a href="https://www.youtube.com/watch?v=3oLFvdeO04A" class="btn-circle" style="background: #2664BE" target="_blank"><i
                   class="fa fa-external-link" aria-hidden="true"></i></a>
             </div>
           </div>
