Added wrapper to fixed overflow hidden is ignored by browser

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div id="root-wrapper">
   <!-- Header -->
   <header id="header">
     <div class="container">
@@ -542,6 +543,7 @@
       </div>
     </div>
   </footer>
+</div>
 </body>
 
 </html>
