--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
               <h4>Actiontec Electronics, 2019-present</h4>
             </div>
             <div class="timeline-body">
-              <p>Maintaine Optim cloud platform used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</p>
-              <p>Develope end-to-end test procedures and features to improve team coding quality.</p>
+              <p>Maintain Optim cloud platform and CPE UI in firmware used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</p>
+              <p>Develop user view app with React-Native and Expo, the product will be pitched to dozens of new ISPs.</p>
               <span class="more-btn-actiontec more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
@@ -282,10 +282,9 @@
           </div>
           <span class="close-btn">&#10005;</span>
           <ol>
-            <li>Maintaine Optim cloud platform used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</li>
-            <li>Renewe CPE UI in firmware with React JS and built up a new system Service Module Management mockup for CES demo.</li>
-            <li>Develope user view app with React-Native and Expo, the product will be pitched to dozens of new ISPs.</li>
-            <li>Develope end-to-end test procedures and features to improve team coding quality.</li>
+            <li>Maintain Optim cloud platform and CPE UI in firmware used by ten thousand+ customer service operators, and using d3/amcharts to achieve millions of data and topology graph visualization.</li>
+            <li>Develop user view app with React-Native and Expo, the product will be pitched to dozens of new ISPs.</li>
+            <li>Develop prototypes including a new system Service Module Management mockup for CES demo, end-to-end test procedures, rollup custom components library to improve team coding quality.</li>
           </ol>
         </div>
       </div>
@@ -317,12 +316,12 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 85%">
           </div>
-          <div class="skill-title">RxJS</div>
-          <span class="percentage-number">75%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 75%">
-          </div>
           <div class="skill-title">React Native</div>
+          <span class="percentage-number">70%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 70%">
+          </div>
+          <div class="skill-title">RxJS</div>
           <span class="percentage-number">70%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 70%">
@@ -334,12 +333,12 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">SASS</div>
+          <div class="skill-title">SASS / RWD</div>
           <span class="percentage-number">90%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">E2E test(cypress) / Unit test(Jest)</div>
+          <div class="skill-title">E2E test(cypress)</div>
           <span class="percentage-number">75%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 75%">
